--- a/TempusFugit/html/studente/comunicazioni.html
+++ b/TempusFugit/html/studente/comunicazioni.html
@@ -28,9 +28,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent"><br/>
           <ul class="navbar-nav mr-auto" style="margin-left:40%;" id="ulNav">
             <!--Corsi-->
-            <li class="nav-item"><a class="nav-link" href="corsi.html">Corsi<span class="sr-only">(current)</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="corsi">Corsi<span class="sr-only">(current)</span></a></li>
             <!--Comunicazioni-->
-            <li class="nav-item"><a class="nav-link" href="comunicazioni.html">Comunicazioni</a></li>
+            <li class="nav-item"><a class="nav-link" href="comunicazioni">Comunicazioni</a></li>
           </ul>
           <ul class="navbar-nav mr-auto" style="margin-left:40%;">
               <li class="nav-item"><a class="nav-link" href="../login.php"><b>Esci</b></a></li>
