--- a/TempusFugit/html/docente/corso.html
+++ b/TempusFugit/html/docente/corso.html
@@ -6,13 +6,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../images/logo.png">
-    <title>Home - Tempus Fugit</title>
+    <title>Corsi - Tempus Fugit</title>
     <!-- Trovare e scaricare i fali corrispettivi ai CDN, per velocizzare il caricamento della pagina -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../../css/home.min.css" type="text/css"/>
+    <script type='text/javascript' src='../../script/javascript/changePage.js'></script>
   </head>
   <body>
     <div id="corso_content">
@@ -25,28 +26,24 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent"><br/>
-          <ul class="navbar-nav mr-auto" style="margin-left:40%;">
+          <ul class="navbar-nav mr-auto" style="margin-left:40%;" id="ulNav">
             <!--Corsi-->
-            <li class="nav-item"><a class="nav-link" href="corsi.html">Corsi<span class="sr-only">(current)</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="corsi">Corsi<span class="sr-only">(current)</span></a></li>
             <!--Comunicazioni-->
-            <li class="nav-item"><a class="nav-link" href="comunicazioni.html">Comunicazioni</a></li>
-            <!--Profilo-->
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profilo</a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item sm" href="../index.html">Esci</a>
-              </div>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="comunicazioni">Comunicazioni</a></li>
+
+          </ul>
+          <ul class="navbar-nav mr-auto" style="margin-left:40%;">
+              <li class="nav-item"><a class="nav-link" href="../login.html"><b>Esci</b></a></li>
           </ul>
         </div>
       </nav>
-      <div class="container" style="margin-bottom:16px; left:-16px;">
+      <div class="container flex" style="padding-bottom:42px;">
         <!--Vista studente di un corso-->
         <div class="row" style="margin-top:16px;">
           <div class="col-md-4">
             <h2 id="nomeCorso">---Nome Corso---</h2>
           </div>
-          <!---->
-          <a href="modificaCorso.html">Modifica il corso!</a>
         </div>
         <div class="row">
           <div class="col-md-4">
@@ -58,25 +55,119 @@
             <p class="lead">---Descrizione del corso---</p>
           </div>
         </div>
-        <hr />
-        <div class="row">
-          <div class="col-md-4">
-            <h4>Materiali e discussioni:</h4>
-          </div>
+        <ul class="nav nav-tabs nav-justified" id="navCorso">
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="eventiPassatiNav">Eventi Passati</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="prossimiEventiNav">Prossimi eventi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="comunicazioniNav">Comunicazioni</a>
+          </li>
+        </ul>
+        <small id="hint" class="justify">per visualizzare tutti gli eventi o le comunicazioni selezionare una categoria.</small>
+        <div id="eventiPassati">
+          <ul class="timeline">
+            <li>
+              <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title" id="nomeCorso">Calcetto</h4>
+                    <p id="orarioCorso"><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 14:30</small></p>
+                  </div>
+                <div class="timeline-body" id="ultimaComunicazione">
+                  <p>Ultima comunicazione.</p>
+                  <p><a class="btn btn-primary btn-lg" href="corso" role="button">Vai al corso</a></p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title" id="nomeCorso">Calcetto</h4>
+                    <p id="orarioCorso"><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 14:30</small></p>
+                  </div>
+                <div class="timeline-body" id="ultimaComunicazione">
+                  <p>Ultima comunicazione.</p>
+                  <p><a class="btn btn-primary btn-lg" href="corso" role="button">Vai al corso</a></p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title" id="nomeCorso">Calcetto</h4>
+                    <p id="orarioCorso"><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 14:30</small></p>
+                  </div>
+                <div class="timeline-body" id="ultimaComunicazione">
+                  <p>Ultima comunicazione.</p>
+                  <p><a class="btn btn-primary btn-lg" href="corso" role="button">Vai al corso</a></p>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="list-group">
-              <p><a href="#" class="list-group-item list-group-item-action" id="materiale">Materiale 1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg" style="position:absolute; right:10px;"><path d="M0 0h24v24H0z" fill="none"/><path d="M18 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 4h5v8l-2.5-1.5L6 12V4z"/></svg></a></p>
-            </div>
-          </div>
+        <div id="prossimiEventi">
+          <ul class="timeline">
+            <li>
+              <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title" id="nomeCorso">Calcetto</h4>
+                    <p id="orarioCorso"><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 14:30</small></p>
+                  </div>
+                <div class="timeline-body" id="ultimaComunicazione">
+                  <p>Ultima comunicazione.</p>
+                  <p><a class="btn btn-primary btn-lg" href="corso" role="button">Vai al corso</a></p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title" id="nomeCorso">Calcetto</h4>
+                    <p id="orarioCorso"><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 14:30</small></p>
+                  </div>
+                <div class="timeline-body" id="ultimaComunicazione">
+                  <p>Ultima comunicazione.</p>
+                  <p><a class="btn btn-primary btn-lg" href="corso" role="button">Vai al corso</a></p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title" id="nomeCorso">Calcetto</h4>
+                    <p id="orarioCorso"><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 14:30</small></p>
+                  </div>
+                <div class="timeline-body" id="ultimaComunicazione">
+                  <p>Ultima comunicazione.</p>
+                  <p><a class="btn btn-primary btn-lg" href="corso" role="button">Vai al corso</a></p>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="list-group">
-              <a href="discussione.html" class="list-group-item list-group-item-action" id="nomeDiscussione">discussione 1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg" style="position:absolute; right:10px;"><path d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2z"/><path d="M0 0h24v24H0z" fill="none"/></svg></a>
-            </div>
-          </div>
+        <div id="comunicazioni">
+          <ul class="timeline">
+            <li>
+              <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title" id="titoloComunicazione">--TItolo Comunicazione--</h4>
+                    <p id="dataComunicazione"><small class="text-muted"><i class="glyphicon glyphicon-time"></i>--Data Comunicazione--</small></p>
+                  </div>
+                <div class="timeline-body" id="ultimaComunicazione">
+                  <p>--Corpo Comunicazione--</p>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -93,5 +184,30 @@
         </div>
       </div>
     </footer>
+    <script>
+    $(document).ready(function(){
+      $("#eventiPassati").hide();
+      $("#prossimiEventi").hide();
+      $("#comunicazioni").hide();
+      $("#eventiPassatiNav").click(function(){
+        $("#hint").hide();
+        $("#eventiPassati").show();
+        $("#prossimiEventi").hide();
+        $("#comunicazioni").hide();
+      });
+      $("#prossimiEventiNav").click(function(){
+        $("#hint").hide();
+        $("#eventiPassati").hide();
+        $("#prossimiEventi").show();
+        $("#comunicazioni").hide();
+      });
+      $("#comunicazioniNav").click(function(){
+        $("#hint").hide();
+        $("#eventiPassati").hide();
+        $("#prossimiEventi").hide();
+        $("#comunicazioni").show();
+      });
+    });
+    </script>
   </body>
 </html>
