--- a/TempusFugit/html/login.html
+++ b/TempusFugit/html/login.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../css/home.min.css" type="text/css"/>
-
+    <link rel="stylesheet" href="../css/login.min.css" type="text/css"/>
     <!-- Custom styles for this template-->
     <link href="../css/.min.css" rel="stylesheet">
   </head>
