--- a/TempusFugit/html/studente/corsi.html
+++ b/TempusFugit/html/studente/corsi.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../images/logo.png">
-    <title>Home - Tempus Fugit</title>
+    <title>Corsi - Tempus Fugit</title>
     <!-- Trovare e scaricare i fali corrispettivi ai CDN, per velocizzare il caricamento della pagina -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -16,28 +16,27 @@
     <script type='text/javascript' src='../../script/javascript/changePage.js'></script>
   </head>
   <body>
-    <div id="corsi_content">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="logo">
-          <img class="rounded" src="../../images/logo.png" alt="" width="38" height="38"/>
-        </div>
-        <a class="navbar-brand" href="index.html" style="position:absolute; top:15px; left:60px;"><b><i>Tempus Fugit</i></b></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent"><br/>
-          <ul class="navbar-nav mr-auto" style="margin-left:40%;" id="ulNav">
-            <!--Corsi-->
-            <li class="nav-item"><a class="nav-link" href="corsi">Corsi<span class="sr-only">(current)</span></a></li>
-            <!--Comunicazioni-->
-            <li class="nav-item"><a class="nav-link" href="comunicazioni">Comunicazioni</a></li>
-          </ul>
-          <ul class="navbar-nav mr-auto" style="margin-left:40%;">
-              <li class="nav-item"><a class="nav-link" href="../login.php"><b>Esci</b></a></li>
-          </ul>
-        </div>
-      </nav>
-      <div class="container" id="main">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="logo">
+        <img class="rounded" src="../../images/logo.png" alt="" width="38" height="38"/>
+      </div>
+      <a class="navbar-brand" href="index.html" style="position:absolute; top:15px; left:60px;"><b><i>Tempus Fugit</i></b></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent"><br/>
+        <ul class="navbar-nav mr-auto" style="margin-left:40%;" id="ulNav">
+          <!--Corsi-->
+          <li class="nav-item"><a class="nav-link" href="corsi">Corsi<span class="sr-only">(current)</span></a></li>
+          <!--Comunicazioni-->
+          <li class="nav-item"><a class="nav-link" href="comunicazioni">Comunicazioni</a></li>
+        </ul>
+        <ul class="navbar-nav mr-auto" style="margin-left:40%;">
+            <li class="nav-item"><a class="nav-link" href="../login.html"><b>Esci</b></a></li>
+        </ul>
+      </div>
+    </nav>
+      <div class="container" id="corsi_content">
         <!--Corsi-->
         <div class="row" style="margin-top:16px;left:-16px;">
           <div class="col-sm col-sm-custom">
@@ -45,8 +44,8 @@
               <div class="card-body" id="divCorso">
                 <h5 class="card-title" id="nomeCorso">Calcetto</h5>
                 <p class="card-text" id="descrizioneCorso">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link" data-toggle="modal" data-target="#myModal" >Iscriviti al corso</a>
-                <a href="corso" class="card-link">Vai al corso</a>
+                <a class="card-link" data-toggle="modal" data-target="#myModal" >Iscriviti al corso</a>
+                <a href="corso" class="card-link" id="vaiCorso">Vai al corso</a>
                 <!-- Modal -->
                 <div id="myModal" class="modal fade" role="dialog">
                   <div class="modal-dialog">
@@ -67,21 +66,18 @@
           </div>
         </div>
       </div>
-    </div>
-  <div class="wrapper">
-  </div>
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 col-sm-6 footerleft ">
-            <div class="logofooter">Tempus Fugit</div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-            <p><i class="fa fa-map-pin"></i> meme street, Uruguay</p>
-            <p><i class="fa fa-phone"></i> Phone (Italy) : +39 666 666 666</p>
-            <p><i class="fa fa-envelope"></i> E-mail : info@l.ol</p>
+      <footer class="customFooter">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 col-sm-6 footerleft ">
+              <div class="logofooter">Tempus Fugit</div>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+              <p><i class="fa fa-map-pin"></i> meme street, Uruguay</p>
+              <p><i class="fa fa-phone"></i> Phone (Italy) : +39 666 666 666</p>
+              <p><i class="fa fa-envelope"></i> E-mail : info@l.ol</p>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
   </body>
 </html>
